[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 235.0
margin_top = 191.0
margin_right = 362.0
margin_bottom = 232.0
text = "INSERIR"

[node name="LineEdit" type="LineEdit" parent="Button"]
margin_left = 9.0
margin_top = -66.0
margin_right = 120.0
margin_bottom = -8.0
align = 1

[node name="Button2" type="Button" parent="."]
margin_left = 548.0
margin_top = 196.0
margin_right = 675.0
margin_bottom = 237.0
text = "RESULTADO"

[node name="ColorRect" type="ColorRect" parent="Button2"]
modulate = Color( 0.760784, 0.0862745, 0.0862745, 1 )
self_modulate = Color( 0.662745, 0.145098, 0.145098, 1 )
margin_left = -47.0
margin_top = -77.0
margin_right = 175.0
margin_bottom = -10.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="Button2/ColorRect"]
margin_left = 2.0
margin_top = -2.0
margin_right = 218.0
margin_bottom = 66.0
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 205.0
margin_top = 133.0
margin_right = 392.0
margin_bottom = 169.0
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 199.0
margin_top = 85.0
margin_right = 766.0
margin_bottom = 184.0
text = "insira 10 números aleátorios em INSERIR e veja-os em ordemcrescente em RESULTADO."
align = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
